# elecciones2025

./: .gitignore  POETRY.md  README.md  pyproject.toml  run.sh
.github/workflows/: actualizar.yml
resultados/datos/segunda_vuelta/: actualizar.py  progreso  resultados.json  timestamp
resultados/datos/segunda_vuelta/presidente/: admin.csv  participacion.csv  validos.csv
resultados/datos/segunda_vuelta/shp/: Municipios339_MIN_AUTO.dbf  Municipios339_MIN_AUTO.sbn  Municipios339_MIN_AUTO.sbx  Municipios339_MIN_AUTO.xml
resultados/vista/: observablehq.config.js
resultados/vista/src/: gradual.md  index.md
resultados/vista/src/components/: definiciones.js  mapa.js
