[tool.poetry]
name = "elecciones2025"
version = "0.1.0"
description = "Datos y recursos sobre las elecciones generales 2025 en Bolivia"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "LICENSE"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
geopandas = "^0.14.0"
requests = "^2.31.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.0"
plotly = "^5.18.0"
# Dependencias geoespaciales necesarias para geopandas
fiona = "^1.9.5"
shapely = "^2.0.2"
pyproj = "^3.6.1"
rtree = "^1.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.18.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/Cordelia242/elecciones2025"
"Wikipedia" = "https://es.wikipedia.org/wiki/Elecciones_generales_de_Bolivia_de_2025"
